# CountPillar

./: .gitignore  .pre-commit-config.yaml  README.md  labels_metadata.csv  requirements.txt  setup.cfg
countpillar/: composition.py  generate_dataset.py  generate_masks.py  grabcut_utils.py  io_utils.py  object_overlay.py  sam_utils.py  transform.py
