[metadata]
name = CountPillar
version = 0.0.0
author = Diwakar Singh
author_email = diwakariitd@gmail.com
description = Synthetic pill image generator for counting purposes
long_description = file: README.rst,
keywords =
    ML
    CV

url = https://github.com/diwakar-vsingh/CountPillar
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = countpillar
python_requires = >=3.10
install_requires =
    numpy
    torch
    torchvision
    transformers

[options.extras_require]
dev =
    black == 23.3.0
    flake8 == 6.0.0
    isort == 5.12.0
    mypy == 1.2.0
    pre-commit == 3.2.2
    types-requests
    types-setuptools
    types-toml
    types-typed-ast
    ipywidgets
    ipdb

[options.packages.find]
exclude =
    tests
